--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ h1 {padding: 270px 0;
 
 </style>   
 <Title>     
-Cherish  
+website name  
 </Title>  
 </Head>  
-<h1>Cherish For Life</h1>
+<h1>YOUR WEBSITE</h1>
 <Body background="https://cdn.wallpapersafari.com/38/93/wOfzb7.jpg">   
   
 </Body>  
