--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ cherish
 </Title>  
 </Head>  
 <h1>Cherish For Life</h1>
-<Body background="https://cdn.wallpapersafari.com/38/93/wOfzb7.jpg">   
+<Body background="cherish.jpg">   
   
 </Body>  
 </Html>
